# CompassEQ

./: .gitignore  CMakeLists.txt  PHASE4_TORTURE_TEST.md  PHASE_2A_OPTIONAL_ADDENDUM.md  PHASE_LOCK.md
Docs/ArtDirection/: ANNOTATED_IDLE.md  NO_GO.md  PLATES_WELLS_RECIPE.md  REFS.md  TYPO_LADDER.md
Release/Internal/: Version.txt
Source/: CompassLookAndFeel.h  Phase1Spec.h  PluginEditor.cpp  PluginEditor.cpp.bak  PluginEditor.cpp.bak_20251227-122617_increase_secondary_label_readability_25pct  PluginEditor.cpp.bak_20251227-122850_legend_GR_to_GB  PluginEditor.cpp.bak_20251227-123040_scale_numbers_push_out  PluginEditor.cpp.bak_20251227-123338_lf_endpoints_push_out_20_800  PluginEditor.cpp.bak_20251227-123449_lf_endpoints_nudge_up  PluginEditor.cpp.bak_20251227-124350_lmf_120_4k_outward  PluginEditor.cpp.bak_20251227-124538_lmf_120_4k_nudge_up  PluginEditor.cpp.bak_20251227-124639_lf_20_800_nudge_up_more  PluginEditor.cpp.bak_20251227-125730_unit_label_khz_case  PluginEditor.cpp.bak_20251227-131000_hf_edge_labels_pushout_1p5k_22k_v2  PluginEditor.cpp.bak_20251227-131103_hf_edge_labels_nudge_up  PluginEditor.cpp.bak_20251227-131236_hmf_600_15k_nudge_down  PluginEditor.cpp.bak_20251227-131320_hmf_nudge_down_middle_ground  PluginEditor.cpp.bak_20251227-153055_label_in_to_input  PluginEditor.cpp.bak_20251227-154154_label_out_to_output_knob_only  PluginEditor.cpp.bak_20251227-154657_revert_input_meter_header_to_IN  PluginEditor.cpp.bak_20251227-155019_lpf_title_raise_2px  PluginEditor.cpp.bak_20251227-155121_hpf_title_raise_2px_match_lpf  PluginEditor.cpp.bak_20251227-155535_hmf_600_left_nudge  PluginEditor.cpp.bak_20251227-155956_lf_20_right_nudge  PluginEditor.cpp.bak_20251227-160623_lf_20_nudge_right_safe  PluginEditor.cpp.bak_20251227-161559_lf_20_xnudge_right_half  PluginEditor.cpp.bak_20251227-161723_lmf_4k_xnudge_left  PluginEditor.cpp.bak_20251227-182955_knob_base_hierarchy_gain_freq  PluginEditor.cpp.bak_20251227-183947_gain_knob_orb_material  PluginEditor.cpp.bak_20251227-190453_gain_dominance_central_notch  PluginEditor.cpp.bak_20251227-191840_gain_dominance_notch_white_large  PluginEditor.cpp.bak_20251227-192515_remove_diagnostic_restore_original  PluginEditor.cpp.bak_20251227-211826_gain_dominance_final  PluginEditor.cpp.bak_20251227-212012_gain_dominance_final_white  PluginEditor.cpp.bak_20251227-212054_gain_dominance_final_cleaned  PluginEditor.cpp.bak_20251227-212106_gain_dominance_final_cleaned  PluginEditor.cpp.bak_20251227-212123_gain_dominance_final_cleaned  PluginEditor.cpp.bak_20251227-212203_revert_to_stock_for_gain  PluginEditor.cpp.bak_20251227-213018_frequency_primary_fixed  PluginEditor.cpp.bak_20251227-213051_frequency_primary_final  (+26 more)
Source/Core/: DSPCore.cpp  DSPCore.h  MeterBus.cpp  MeterBus.h  OverSamplingManager.cpp  OverSamplingManager.h  ParameterState.cpp  ParameterState.h  Router.cpp  Router.h
_archive/: backup_sweep_20260102-190315.tgz
_graveyard/: Source_backup_20251213_155001.tgz
